425890: [Table2]/[Diagram] PapyrusPreferenceStore must be refactored to be used by all Papyrus Editors https://bugs.eclipse.org/bugs/show_bug.cgi?id=425890
refactore the diagram preferences + add preferences support for table